homer/30-service.yml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  type: NodePort
  selector:
    app: homer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
