homer/50-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homer
  namespace: homer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: homer.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: homer
          servicePort: 80
